js/src/tests/test262/built-ins/Error/instance-prototype.js
assert
.
sameValue
(
Error
.
prototype
.
isPrototypeOf
(
new
Error
(
)
)
true
'
Error
.
prototype
.
isPrototypeOf
(
new
Error
(
)
)
returns
true
'
)
;
assert
.
sameValue
(
Error
.
prototype
.
isPrototypeOf
(
Error
(
)
)
true
'
Error
.
prototype
.
isPrototypeOf
(
Error
(
)
)
returns
true
'
)
;
verifyProperty
(
Error
'
prototype
'
{
writable
:
false
enumerable
:
false
configurable
:
false
}
)
;
reportCompare
(
0
0
)
;
